<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient"
    tools:context=".shoppingcart.views.UserLogged">

    <EditText
        android:id="@+id/age"
        android:layout_width="259dp"
        android:layout_height="49dp"
        android:background="#273036"
        android:ems="10"
        android:inputType="number|textPersonName"
        android:paddingStart="20dp"
        android:hint="@string/age"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_details"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#273036"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_details"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/addCar"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="146dp"
        android:layout_marginBottom="208dp"
        android:gravity="center"
        android:text="Add New Car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="405dp"
        android:layout_height="69dp"
        android:layout_marginBottom="52dp"
        android:background="#273036"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/signup_details"
        android:layout_width="186dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/arbutus"
        android:text=" WELCOME"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/person"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonDisconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/revoke_access"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/goShop"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="146dp"
        android:layout_marginBottom="160dp"
        android:gravity="center"
        android:text="@string/go_to_shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pin_location"
        android:layout_width="37dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/location"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#273036"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:hint="@string/full_name"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_details"
        app:layout_constraintVertical_bias="0.152" />

    <Button
        android:id="@+id/update"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:text="@string/updateProfile1"
        app:layout_constraintBottom_toTopOf="@+id/addCar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />
</androidx.constraintlayout.widget.ConstraintLayout>